# SwordFS

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
include/: SwordfsVersion.h.in
scripts/: install-deps.sh
src/: logging.cpp  logging.hpp
src/cmd/: Cmd.cpp  Cmd.hpp  Format.cpp  Format.hpp  Main.cpp  Mount.cpp  Mount.hpp  cmd.cpp  cmd.hpp  main.cpp  mount.cpp
src/fuse/: Fs.cpp  Fs.hpp  Limits.hpp  Vfs.cpp  Vfs.hpp  VfsImpl.cpp  VfsImpl.hpp  fs.cpp  fs.hpp
src/meta/: CMakeLists.txt  EngineError.hpp  IMetadataEngine.hpp  KeyBuilder.cpp  KeyBuilder.hpp  MemEngine.cpp  MemEngine.hpp
src/meta/tests/: MemEngine_test.cpp
src/metadata/: MemMetaStore.cpp  MemMetaStore.hpp  Meta.hpp  MetaStore.hpp  Types.hpp  Utils.cpp  Utils.hpp
src/metadata/mem/: MemMetaImpl.cpp  MemMetaImpl.hpp  MemMetaStore.cpp  MemMetaStore.hpp
src/storage/: IDataEngine.hpp  S3DataEngine.cpp  S3DataEngine.hpp  Slice.cpp  Slice.hpp  StorageRegistry.cpp  StorageRegistry.hpp  StorageUrl.cpp  StorageUrl.hpp  VolumeConfig.cpp  VolumeConfig.hpp
src/storage/s3/: S3DataEngine.cpp  S3DataEngine.hpp
src/utils/: Config.cpp  Config.hpp  ConfigCenter.cpp  ConfigCenter.hpp  Context.hpp  FiberRuntime.cpp  FiberRuntime.hpp  Fuse.hpp  Logging.cpp  Logging.hpp  Status.cpp  Status.hpp
src/volume/: VolumeConfig.cpp  VolumeConfig.hpp
tests/integration/: smoke_test.sh
tests/integration/storage/: S3DataEngine_test.cpp  S3Integration_test.cpp
tests/metadata/mem/: MemMetaImplReadDirTest.cpp  MemMetaImplRenameTest.cpp  MemMetaImplTest.cpp  MemMetaStoreTest.cpp
tests/unittests/metadata/: UtilsTest.cpp
tests/unittests/metadata/mem/: MemMetaImplEdgeTest.cpp  MemMetaImplTest.cpp  MemMetaStoreConcurrencyTest.cpp  MemMetaStoreSwapTest.cpp
tests/unittests/storage/: SliceTest.cpp  StorageRegistryTest.cpp
tests/unittests/utils/: ConfigCenterTest.cpp  StatusTest.cpp
